--- a/AntennaSwitcher.csproj
+++ b/AntennaSwitcher.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{656807AB-1A4F-4A49-B3AF-BE27B184E8D4}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>AtnennaSwitcher</RootNamespace>
-    <AssemblyName>AtnennaSwitcher</AssemblyName>
+    <RootNamespace>AntennaSwitcher</RootNamespace>
+    <AssemblyName>AntennaSwitcher</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
